--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 		"url": "https://github.com/pact-foundation/pact-node/issues"
 	},
 	"dependencies": {
-		"pact-mock-service": "git://github.com/soundstep/pact-mock-service-npm.git",
+		"@pact-foundation/pact-mock-service": "~2.1.0",
 		"@pact-foundation/pact-provider-verifier": "^1.4.3",
 		"bunyan": "^1.8.12",
 		"bunyan-prettystream": "^0.1.3",
